<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Welcome to Beer Dropper!</string>
    <string name="app_name">BeerDropper</string>
    <string name="users_order">This will Be and Order</string>

    <!-- Button Names When Delivery Clicked On Order.java -->
    <string name="drop_off">Drop Off</string>
    <string name="get_directions">Get Directions</string>
    <string name="cancel_order">Cancel order</string>
    <string name="call_customer">Call Customer</string>

    <!-- Button Names When Dropoff clicked DropOff.java -->
    <string name="scan_id">Scan ID </string>
    <string name="signature">Get Signature </string>
    <string name="complete_order">Complete Order</string>
    <string name="view_order_details">Details</string>
    <string name="buttonStart">Start fetch</string>
    <string name="buttonStop">Stop fetch</string>

    <!-- **Signature Menu Items** -->
    <string name="reset_label">Reset</string>
    <string name="change_pen_color">Pen Color</string>
    <string name="save_label">Save</string>
    <string name="black_label">Black</string>
    <string name="red_label">Red</string>
    <string name="green_label">Green</string>
    <string name="blue_label">Blue</string>

    <!-- Order Menu Items -->
    <string name="completed_orders">Completed Orders</string>
    <string name="new_orders">New Orders</string>
    <string name="deleted_orders">Deleted Orders</string>

</resources>